// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`auto generate usage > loosely entry command > console 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>
"
`;

exports[`auto generate usage > loosely entry command > rendered 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>
"
`;

exports[`auto generate usage > loosely inline command > console 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > loosely inline command > rendered 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > loosely sub commands > command2 1`] = `
"This is command2

USAGE:
  my-cli command2 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -b, --bar [bar]           (default: 42)
"
`;

exports[`auto generate usage > loosely sub commands > console output 1`] = `
"USAGE:
  my-cli [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS>                     This is entry command
  command2 <OPTIONS>            This is command2

For more info, run any command with the \`--help\` flag:
  my-cli --help
  my-cli command2 --help

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>          The foo option

This is command2

USAGE:
  my-cli command2 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -b, --bar [bar]           (default: 42)
"
`;

exports[`auto generate usage > loosely sub commands > entry 1`] = `
"USAGE:
  my-cli [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS>                     This is entry command
  command2 <OPTIONS>            This is command2

For more info, run any command with the \`--help\` flag:
  my-cli --help
  my-cli command2 --help

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>          The foo option
"
`;

exports[`auto generate usage > named entry command + sub commands > command1 1`] = `
"Modern CLI tool (gunshi v0.0.0)
This is command1 (entry)

USAGE:
  gunshi command1 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>          The foo option
"
`;

exports[`auto generate usage > named entry command + sub commands > entry 1`] = `
"Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi [COMMANDS] <OPTIONS>

COMMANDS:
  [entry] <OPTIONS>
  command1 <OPTIONS>         This is command1 (entry)

For more info, run any command with the \`--help\` flag:
  gunshi --help
  gunshi command1 --help

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > named entry command + sub commands > explicit entry 1`] = `
"Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi entry <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > named entry command > console 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > named entry command > rendered 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > strictly entry command > console 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -h, --help               [boolean] Display this help message
  -v, --version            [boolean] Display this version
  -f, --foo <foo>          [string]  The foo option

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
"
`;

exports[`auto generate usage > strictly entry command > rendered 1`] = `
"Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -h, --help               [boolean] Display this help message
  -v, --version            [boolean] Display this version
  -f, --foo <foo>          [string]  The foo option

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
"
`;

exports[`auto generate usage > strictly sub commands > command1 1`] = `
"Modern CLI tool (gunshi v0.0.0)
This is command1 (entry)

USAGE:
  gunshi command1 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>          The foo option

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
"
`;

exports[`auto generate usage > strictly sub commands > command2 1`] = `
"Modern CLI tool (gunshi v0.0.0)
This is command2

USAGE:
  gunshi command2 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -b, --bar [bar]          The bar option (default: 42)

EXAMPLES:
  # Example 1
  $ gunshi command2 --bar 42
  # Example 2
  $ gunshi command2 -b 42
"
`;

exports[`auto generate usage > strictly sub commands > console output 1`] = `
"Modern CLI tool (gunshi v0.0.0)

使い方:
    gunshi [コマンド] <オプション>

コマンド:
    [command1] <オプション>            This is command1 (entry)
    command2 <オプション>              This is command2

詳細は、コマンドと\`--help\`フラグを実行してください:
    gunshi --help
    gunshi command2 --help

オプション:
    -h, --help                    Display this help message
    -v, --version                 Display this version
    -f, --foo <foo>               The foo option

例:
    # Example 1
    $ gunshi --foo bar
    # Example 2
    $ gunshi -f bar

Modern CLI tool (gunshi v0.0.0)

This is command1 (entry)

USAGE:
  gunshi command1 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>          The foo option

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar

Modern CLI tool (gunshi v0.0.0)

This is command2

USAGE:
  gunshi command2 <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -b, --bar [bar]          The bar option (default: 42)

EXAMPLES:
  # Example 1
  $ gunshi command2 --bar 42
  # Example 2
  $ gunshi command2 -b 42
"
`;

exports[`auto generate usage > strictly sub commands > entry 1`] = `
"Modern CLI tool (gunshi v0.0.0)
使い方:
    gunshi [コマンド] <オプション>

コマンド:
    [command1] <オプション>            This is command1 (entry)
    command2 <オプション>              This is command2

詳細は、コマンドと\`--help\`フラグを実行してください:
    gunshi --help
    gunshi command2 --help

オプション:
    -h, --help                    Display this help message
    -v, --version                 Display this version
    -f, --foo <foo>               The foo option

例:
    # Example 1
    $ gunshi --foo bar
    # Example 2
    $ gunshi -f bar
"
`;

exports[`command decorators > not call command runner 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`custom generate usage > basic 1`] = `
"Usage:
  gunshi [options]

Options:
  --help       [boolean]   Display this help message
  --version    [boolean]   Display this version
  --foo        [string]    this is foo option
  --bar        [boolean]   this is bar option
  --baz        [number]    this is baz option

*****************************************
* Optional argument '--bar' is required *
*****************************************"
`;

exports[`edge cases > 'description' option 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -h, --help                               Display this help message
  -v, --version                            Display this version
  -d, --description <description>          This is a description of description option
"
`;

exports[`github issues > #252 > console output 1`] = `
"mycli description (mycli v1.2.3)

USAGE:
  mycli <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version

mycli description (mycli v1.2.3)

USAGE:
  mycli [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS> 
  cmd1 <OPTIONS>

For more info, run any command with the \`--help\` flag:
  mycli --help
  mycli cmd1 --help

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version

mycli description (mycli v1.2.3)

USAGE:
  mycli [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS> 
  cmd1 <OPTIONS>
  cmd2 <OPTIONS>

For more info, run any command with the \`--help\` flag:
  mycli --help
  mycli cmd1 --help
  mycli cmd2 --help

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`github issues > #252 > example1 1`] = `
"mycli description (mycli v1.2.3)
USAGE:
  mycli <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`github issues > #252 > example2 1`] = `
"mycli description (mycli v1.2.3)
USAGE:
  mycli [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS> 
  cmd1 <OPTIONS>

For more info, run any command with the \`--help\` flag:
  mycli --help
  mycli cmd1 --help

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`github issues > #252 > example3 1`] = `
"mycli description (mycli v1.2.3)
USAGE:
  mycli [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS> 
  cmd1 <OPTIONS>
  cmd2 <OPTIONS>

For more info, run any command with the \`--help\` flag:
  mycli --help
  mycli cmd1 --help
  mycli cmd2 --help

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`lazy command > command loading > config-command 1`] = `
"lazy-command-loading (lazy-command-loading v1.0.0)
Loaded configured command

USAGE:
  lazy-command-loading config <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`lazy command > command loading > default-command 1`] = `
"lazy-command-loading (lazy-command-loading v1.0.0)
USAGE:
  lazy-command-loading [COMMANDS] <OPTIONS>

COMMANDS:
  <OPTIONS>                     CLI with dynamic commands
  config <OPTIONS>              Load command configuration

For more info, run any command with the \`--help\` flag:
  lazy-command-loading --help
  lazy-command-loading config --help

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`usageSilent 1`] = `
"Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -h, --help               Display this help message
  -v, --version            Display this version
  -f, --foo <foo>          this is foo option
  --bar                    this is bar option
  -b, --baz [baz]          this is baz option (default: 42)
"
`;
